# flask-chatbot

./: .env.example  .gitignore  GEMINI.md  LICENSE  README.md  config.py  main.py  package-lock.json  pyproject.toml
app/: __init__.py  chat_client.py  database.py  routes.py  schema.sql  spotify_client.py
app/static/: styles.css
app/templates/: index.html
tests/: conftest.py  test_app.py  test_chat_client.py  test_database_chat.py  test_spotify_client.py
