[project]
name = "flask-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "openai",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
pythonpath = "."

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-flask>=1.3.0",
    "ruff>=0.12.4",
]

[project.scripts]
start = "flask run"
